# sdl2-game-template

./: CMakeLists.txt  README.md
cmake/: FindTMXLite.cmake
src/: main.cpp
